[fix/#23]: Collect 대신 toList 로 변경